31 May 2017: Wouter
	- Fix #1273: cachedb.c doesn't compile with -Wextra.
	- If MSG_FASTOPEN gives EPIPE fallthrough to try normal tcp write.

30 May 2017: Ralph
	- Fix #1269: inconsistent use of built-in local zones with views.
	- Add defaults for new local-zone trees added to views using
	  unbound-control.

30 May 2017: Wouter
	- Support for openssl EVP_DigestVerify.
	- Support for the ED25519 algorithm with openssl (from openssl 1.1.1).

29 May 2017: Wouter
	- Fix assertion for low buffer size and big edns payload when worker
	  overrides udpsize.

26 May 2017: Ralph
	- Added redirect-bogus.patch to contrib directory.

26 May 2017: Wouter
	- Fix #1270: unitauth.c doesn't compile with higher warning level
	  and optimization
	- exec_prefix is by default equal to prefix.
	- printout localzone for duplicate local-zone warnings.

24 May 2017: Wouter
	- authzone cname chain, no rrset duplicates, wildcard doesn't change
	  rrsets added for cname chain.

23 May 2017: Wouter
	- first services/authzone check in, it compiles and reads and writes
	  zonefiles.
	- iana portlist update

22 May 2017: Wouter
	- Fix #1268: SIGSEGV after log_reopen.

18 May 2017: Wouter
	- Fix #1265 to use /bin/kill.
	- Fix #1267: Libunbound validator/val_secalgo.c uses obsolete APIs,
	  and compatibility with BoringSSL.

17 May 2017: Wouter
	- Fix #1265: contrib/unbound.service contains hardcoded path.

17 May 2017: George
	- Use qstate's region for IPSECKEY rrset (ipsecmod).

16 May 2017: George
	- Implemented opportunistic IPsec support module (ipsecmod).
	- Some whitespace fixup.

16 May 2017: Wouter
	- updated dependencies in the makefile.
	- document trust-anchor-signaling in example config file.
	- updated configure, dependencies and flex output.
	- better module memory lookup, fix of unbound-control shm names for
	  module memory printout of statistics.
	- Fix type AVC sldns rrdef.

12 May 2017: Wouter
	- Adjust servfail by iterator to not store in cache when serve-expired